# wasm-icm-calculator

./: .gitignore  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
docs/: design-decisions.md  design-spec-decisions.md  design-spec.md  design.ja.md  design.md  usage-en.md  usage-ja.md
icm-engine/: Cargo.toml
icm-engine/src/: bounty.rs  breakeven.rs  icm_exact.rs  icm_monte_carlo.rs  lib.rs  pko.rs  pressure.rs  types.rs  validation.rs
icm-engine/tests/: icm_exact_proptest.rs  icm_mc_proptest.rs  integration_test.rs  validation_test.rs
plans/: idempotent-mapping-hippo.md  implementation-plan-wasm-icm-calculator.md  plan-html.md
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  wireframe.html
web/scripts/: build-docs.mjs
web/src/: app.tsx  engine.ts  main.tsx  sw.ts  types.ts  worker.test.ts  worker.ts
web/src/components/: BreakevenInput.tsx  CalculateButton.tsx  CsvInput.tsx  EquityChart.tsx  Header.tsx  MetadataBar.tsx  MttSimpleMode.tsx  PayoutStructure.tsx  PkoSettings.tsx  PlayerInput.tsx  PlayerTable.tsx  PressureCurveChart.tsx  ResultsTable.tsx  TournamentTypeSelector.tsx
web/src/hooks/: useEngine.ts  useI18n.ts
web/src/i18n/: en.json  ja.json
web/src/styles/: index.css
web/src/utils/: csvParser.test.ts  csvParser.ts  estimateTime.test.ts  estimateTime.ts  mttPayouts.ts
