[package]
name = "icm-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = { version = "0.4", features = ["wasm_js"] }
rand = { version = "0.9", features = ["small_rng"] }
console_error_panic_hook = "0.1"
js-sys = "0.3"

[dev-dependencies]
proptest = "1"

[profile.release]
opt-level = "s"
lto = true
